# python-game-of-life

./: README.md  conway.py  pyproject.toml
