[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adrien Carpentier", email = "me@adriencarpentier.com"},
]
dependencies = [
    "numba>=0.58.0",
    "numpy>=1.25.2",
    "arcade>=2.6.17",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.0",
]
